--- a/html/charts.html
+++ b/html/charts.html
@@ -20,11 +20,11 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../../assets/images/favicon.png"
+      href="../assets/images/favicon.png"
     />
     <!-- Custom CSS -->
-    <link href="../../assets/libs/flot/css/float-chart.css" rel="stylesheet" />
-    <link href="../../dist/css/style.min.css" rel="stylesheet" />
+    <link href="../assets/libs/flot/css/float-chart.css" rel="stylesheet" />
+    <link href="../dist/css/style.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -70,7 +70,7 @@
                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                 <!-- Dark Logo icon -->
                 <img
-                  src="../../assets/images/logo-icon.png"
+                  src="../assets/images/logo-icon.png"
                   alt="homepage"
                   class="light-logo"
                 />
@@ -80,7 +80,7 @@
               <span class="logo-text">
                 <!-- dark Logo text -->
                 <img
-                  src="../../assets/images/logo-text.png"
+                  src="../assets/images/logo-text.png"
                   alt="homepage"
                   class="light-logo"
                 />
@@ -89,7 +89,7 @@
               <!-- <b class="logo-icon"> -->
               <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
               <!-- Dark Logo icon -->
-              <!-- <img src="../../assets/images/logo-text.png" alt="homepage" class="light-logo" /> -->
+              <!-- <img src="../assets/images/logo-text.png" alt="homepage" class="light-logo" /> -->
 
               <!-- </b> -->
               <!--End Logo icon -->
@@ -313,7 +313,7 @@
                   aria-expanded="false"
                 >
                   <img
-                    src="../../assets/images/users/1.jpg"
+                    src="../assets/images/users/1.jpg"
                     alt="user"
                     class="rounded-circle"
                     width="31"
@@ -816,31 +816,31 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="../../assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="../../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="../../assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-    <script src="../../assets/extra-libs/sparkline/sparkline.js"></script>
+    <script src="../assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
+    <script src="../assets/extra-libs/sparkline/sparkline.js"></script>
     <!--Wave Effects -->
-    <script src="../../dist/js/waves.js"></script>
+    <script src="../dist/js/waves.js"></script>
     <!--Menu sidebar -->
-    <script src="../../dist/js/sidebarmenu.js"></script>
+    <script src="../dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
-    <script src="../../dist/js/custom.min.js"></script>
+    <script src="../dist/js/custom.min.js"></script>
     <!-- this page js -->
-    <script src="../../assets/libs/chart/matrix.interface.js"></script>
-    <script src="../../assets/libs/chart/excanvas.min.js"></script>
-    <script src="../../assets/libs/flot/jquery.flot.js"></script>
-    <script src="../../assets/libs/flot/jquery.flot.pie.js"></script>
-    <script src="../../assets/libs/flot/jquery.flot.time.js"></script>
-    <script src="../../assets/libs/flot/jquery.flot.stack.js"></script>
-    <script src="../../assets/libs/flot/jquery.flot.crosshair.js"></script>
-    <script src="../../assets/libs/chart/jquery.peity.min.js"></script>
-    <script src="../../assets/libs/chart/matrix.charts.js"></script>
-    <script src="../../assets/libs/chart/jquery.flot.pie.min.js"></script>
-    <script src="../../assets/libs/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
-    <script src="../../assets/libs/chart/turning-series.js"></script>
-    <script src="../../dist/js/pages/chart/chart-page-init.js"></script>
+    <script src="../assets/libs/chart/matrix.interface.js"></script>
+    <script src="../assets/libs/chart/excanvas.min.js"></script>
+    <script src="../assets/libs/flot/jquery.flot.js"></script>
+    <script src="../assets/libs/flot/jquery.flot.pie.js"></script>
+    <script src="../assets/libs/flot/jquery.flot.time.js"></script>
+    <script src="../assets/libs/flot/jquery.flot.stack.js"></script>
+    <script src="../assets/libs/flot/jquery.flot.crosshair.js"></script>
+    <script src="../assets/libs/chart/jquery.peity.min.js"></script>
+    <script src="../assets/libs/chart/matrix.charts.js"></script>
+    <script src="../assets/libs/chart/jquery.flot.pie.min.js"></script>
+    <script src="../assets/libs/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
+    <script src="../assets/libs/chart/turning-series.js"></script>
+    <script src="../dist/js/pages/chart/chart-page-init.js"></script>
   </body>
 </html>
