--- a/html/error-500.html
+++ b/html/error-500.html
@@ -20,10 +20,10 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../../assets/images/favicon.png"
+      href="../assets/images/favicon.png"
     />
     <!-- Custom CSS -->
-    <link href="../../dist/css/style.min.css" rel="stylesheet" />
+    <link href="../dist/css/style.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -51,7 +51,7 @@
       <!-- ============================================================== -->
       <div class="error-box">
         <div class="error-body text-center">
-          <h1 class="error-title text-danger">403</h1>
+          <h1 class="error-title text-danger">500</h1>
           <h3 class="text-uppercase error-subtitle">PAGE NOT FOUND !</h3>
           <p class="text-muted mt-4 mb-4">
             YOU SEEM TO BE TRYING TO FIND HIS WAY HOME
@@ -87,9 +87,9 @@
     <!-- ============================================================== -->
     <!-- All Required js -->
     <!-- ============================================================== -->
-    <script src="../../assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="../../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- ============================================================== -->
     <!-- This page plugin js -->
     <!-- ============================================================== -->
