--- a/html/widgets.html
+++ b/html/widgets.html
@@ -20,10 +20,10 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../../assets/images/favicon.png"
+      href="../assets/images/favicon.png"
     />
     <!-- Custom CSS -->
-    <link href="../../dist/css/style.min.css" rel="stylesheet" />
+    <link href="../dist/css/style.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -69,7 +69,7 @@
                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                 <!-- Dark Logo icon -->
                 <img
-                  src="../../assets/images/logo-icon.png"
+                  src="../assets/images/logo-icon.png"
                   alt="homepage"
                   class="light-logo"
                 />
@@ -79,7 +79,7 @@
               <span class="logo-text">
                 <!-- dark Logo text -->
                 <img
-                  src="../../assets/images/logo-text.png"
+                  src="../assets/images/logo-text.png"
                   alt="homepage"
                   class="light-logo"
                 />
@@ -88,7 +88,7 @@
               <!-- <b class="logo-icon"> -->
               <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
               <!-- Dark Logo icon -->
-              <!-- <img src="../../assets/images/logo-text.png" alt="homepage" class="light-logo" /> -->
+              <!-- <img src="../assets/images/logo-text.png" alt="homepage" class="light-logo" /> -->
 
               <!-- </b> -->
               <!--End Logo icon -->
@@ -312,7 +312,7 @@
                   aria-expanded="false"
                 >
                   <img
-                    src="../../assets/images/users/1.jpg"
+                    src="../assets/images/users/1.jpg"
                     alt="user"
                     class="rounded-circle"
                     width="31"
@@ -645,7 +645,7 @@
                   <div class="d-flex flex-row comment-row mt-0">
                     <div class="p-2">
                       <img
-                        src="../../assets/images/users/1.jpg"
+                        src="../assets/images/users/1.jpg"
                         alt="user"
                         width="50"
                         class="rounded-circle"
@@ -684,7 +684,7 @@
                   <div class="d-flex flex-row comment-row">
                     <div class="p-2">
                       <img
-                        src="../../assets/images/users/4.jpg"
+                        src="../assets/images/users/4.jpg"
                         alt="user"
                         width="50"
                         class="rounded-circle"
@@ -723,7 +723,7 @@
                   <div class="d-flex flex-row comment-row">
                     <div class="p-2">
                       <img
-                        src="../../assets/images/users/5.jpg"
+                        src="../assets/images/users/5.jpg"
                         alt="user"
                         width="50"
                         class="rounded-circle"
@@ -762,7 +762,7 @@
                   <div class="d-flex flex-row comment-row">
                     <div class="p-2">
                       <img
-                        src="../../assets/images/users/4.jpg"
+                        src="../assets/images/users/4.jpg"
                         alt="user"
                         width="50"
                         class="rounded-circle"
@@ -801,7 +801,7 @@
                   <div class="d-flex flex-row comment-row">
                     <div class="p-2">
                       <img
-                        src="../../assets/images/users/3.jpg"
+                        src="../assets/images/users/3.jpg"
                         alt="user"
                         width="50"
                         class="rounded-circle"
@@ -1315,7 +1315,7 @@
                         the comment..
                       </p>
                       <img
-                        src="../../assets/images/background/img4.jpg"
+                        src="../assets/images/background/img4.jpg"
                         class="img-fluid"
                       />
                     </div>
@@ -1323,7 +1323,7 @@
                   <div class="tab-pane p-20" id="profile" role="tabpanel">
                     <div class="p-20">
                       <img
-                        src="../../assets/images/background/img4.jpg"
+                        src="../assets/images/background/img4.jpg"
                         class="img-fluid"
                       />
                       <p class="mt-2">
@@ -1345,7 +1345,7 @@
                         the comment..
                       </p>
                       <img
-                        src="../../assets/images/background/img4.jpg"
+                        src="../assets/images/background/img4.jpg"
                         class="img-fluid"
                       />
                     </div>
@@ -1386,7 +1386,7 @@
                             <img
                               class="rounded-circle"
                               width="40"
-                              src="../../assets/images/users/1.jpg"
+                              src="../assets/images/users/1.jpg"
                               alt="user"
                               data-toggle="tooltip"
                               data-placement="top"
@@ -1398,7 +1398,7 @@
                             <img
                               class="rounded-circle"
                               width="40"
-                              src="../../assets/images/users/2.jpg"
+                              src="../assets/images/users/2.jpg"
                               alt="user"
                               data-toggle="tooltip"
                               data-placement="top"
@@ -1410,7 +1410,7 @@
                             <img
                               class="rounded-circle"
                               width="40"
-                              src="../../assets/images/users/3.jpg"
+                              src="../assets/images/users/3.jpg"
                               alt="user"
                               data-toggle="tooltip"
                               data-placement="top"
@@ -1422,7 +1422,7 @@
                             <img
                               class="rounded-circle"
                               width="40"
-                              src="../../assets/images/users/4.jpg"
+                              src="../assets/images/users/4.jpg"
                               alt="user"
                               data-toggle="tooltip"
                               data-placement="top"
@@ -1478,7 +1478,7 @@
                             <img
                               class="rounded-circle"
                               width="40"
-                              src="../../assets/images/users/3.jpg"
+                              src="../assets/images/users/3.jpg"
                               alt="user"
                               data-toggle="tooltip"
                               data-placement="top"
@@ -1490,7 +1490,7 @@
                             <img
                               class="rounded-circle"
                               width="40"
-                              src="../../assets/images/users/4.jpg"
+                              src="../assets/images/users/4.jpg"
                               alt="user"
                               data-toggle="tooltip"
                               data-placement="top"
@@ -1546,7 +1546,7 @@
                             <img
                               class="rounded-circle"
                               width="40"
-                              src="../../assets/images/users/3.jpg"
+                              src="../assets/images/users/3.jpg"
                               alt="user"
                               data-toggle="tooltip"
                               data-placement="top"
@@ -1558,7 +1558,7 @@
                             <img
                               class="rounded-circle"
                               width="40"
-                              src="../../assets/images/users/4.jpg"
+                              src="../assets/images/users/4.jpg"
                               alt="user"
                               data-toggle="tooltip"
                               data-placement="top"
@@ -1801,17 +1801,17 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="../../assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="../../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="../../assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-    <script src="../../assets/extra-libs/sparkline/sparkline.js"></script>
+    <script src="../assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
+    <script src="../assets/extra-libs/sparkline/sparkline.js"></script>
     <!--Wave Effects -->
-    <script src="../../dist/js/waves.js"></script>
+    <script src="../dist/js/waves.js"></script>
     <!--Menu sidebar -->
-    <script src="../../dist/js/sidebarmenu.js"></script>
+    <script src="../dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
-    <script src="../../dist/js/custom.min.js"></script>
+    <script src="../dist/js/custom.min.js"></script>
   </body>
 </html>
