--- a/html/pages-elements.html
+++ b/html/pages-elements.html
@@ -20,12 +20,12 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="../../assets/images/favicon.png"
+      href="../assets/images/favicon.png"
     />
     <!-- Custom CSS -->
-    <link href="../../dist/css/style.min.css" rel="stylesheet" />
+    <link href="../dist/css/style.min.css" rel="stylesheet" />
     <link
-      href="../../assets/libs/toastr/build/toastr.min.css"
+      href="../assets/libs/toastr/build/toastr.min.css"
       rel="stylesheet"
     />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -73,7 +73,7 @@
                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                 <!-- Dark Logo icon -->
                 <img
-                  src="../../assets/images/logo-icon.png"
+                  src="../assets/images/logo-icon.png"
                   alt="homepage"
                   class="light-logo"
                 />
@@ -83,7 +83,7 @@
               <span class="logo-text">
                 <!-- dark Logo text -->
                 <img
-                  src="../../assets/images/logo-text.png"
+                  src="../assets/images/logo-text.png"
                   alt="homepage"
                   class="light-logo"
                 />
@@ -92,7 +92,7 @@
               <!-- <b class="logo-icon"> -->
               <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
               <!-- Dark Logo icon -->
-              <!-- <img src="../../assets/images/logo-text.png" alt="homepage" class="light-logo" /> -->
+              <!-- <img src="../assets/images/logo-text.png" alt="homepage" class="light-logo" /> -->
 
               <!-- </b> -->
               <!--End Logo icon -->
@@ -316,7 +316,7 @@
                   aria-expanded="false"
                 >
                   <img
-                    src="../../assets/images/users/1.jpg"
+                    src="../assets/images/users/1.jpg"
                     alt="user"
                     class="rounded-circle"
                     width="31"
@@ -1358,7 +1358,7 @@
                         </div>
                         <div class="modal-body">
                           <img
-                            src="../../assets/images/background/img5.jpg"
+                            src="../assets/images/background/img5.jpg"
                             width="100% "
                           />
                         </div>
@@ -1655,20 +1655,20 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="../../assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="../../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="../../assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-    <script src="../../assets/extra-libs/sparkline/sparkline.js"></script>
+    <script src="../assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
+    <script src="../assets/extra-libs/sparkline/sparkline.js"></script>
     <!--Wave Effects -->
-    <script src="../../dist/js/waves.js"></script>
+    <script src="../dist/js/waves.js"></script>
     <!--Menu sidebar -->
-    <script src="../../dist/js/sidebarmenu.js"></script>
+    <script src="../dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
-    <script src="../../dist/js/custom.min.js"></script>
+    <script src="../dist/js/custom.min.js"></script>
     <!-- this page js -->
-    <script src="../../assets/libs/toastr/build/toastr.min.js"></script>
+    <script src="../assets/libs/toastr/build/toastr.min.js"></script>
     <script>
       $(function () {
         // Success Type
